# MoreBeautifulPython

./: .gitignore  LICENSE  README.md  build_and_push.py  build_and_upload.ps1  build_and_upload.sh  data.json  data.jsonl  example_log.py  examples.py  log  pyproject.toml  run.py  setup.cfg  setup.py  sync.py  test_examples.py
.github/workflows/: ci.yml
data/: test.yaml
src/: aetk.py  aetk_examples.py  mbp.py
src/mbp/: ai.py  core.py  info.py  llm.py  sync.py
tests/: example_log.py  test_all.py  test_examples.py  test_log.py
