[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mbp"
description = "Make Python even more beautiful :) This package includes implementations that you wish were in the standard library."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Dongqi Su" }]
license = { text = "MIT" }
requires-python = ">=3.11.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["wcwidth>=0.2.13", "pyyaml>=6.0.2", "termcolor>=3.2.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sudongqi/MoreBeautifulPython"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mbp.info.VERSION" }

[tool.ruff]
line-length = 144

[tool.ruff.lint]
select = []
