[metadata]

name = aetk
version = 1.1.1
author = Dongqi Su
description = Make Python more beautiful :) This package includes tools that you wish were in the standard Python library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudongqi/AbsolutelyEssentialToolKit.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = aetk
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm >= 4.64.0

[options.packages.find]
where = src