[metadata]

name = mbp
version = 1.5.3
author = Dongqi Su
description = Make Python even more beautiful :) This package includes implementations that you wish were in the standard library..
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudongqi/MoreBeautifulPython.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = mbp
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    wcwidth>=0.2.5

[options.packages.find]
where = src